--- a/_docs/text/conclusion.tex
+++ b/_docs/text/conclusion.tex
@@ -1,4 +1,4 @@
 \chapter{Záver}\label{chap:conclusion}
 Neustálym rozvojom webových technológií narastá aj dopyt ľudí po informáciách, ktoré je možné nájsť na internete. Pre ich jednoduché a rýchle sprístupňovanie širokej verejnosti, vzniká množstvo webových aplikácií slúžiacich na vytváranie a spravovanie online dokumentov. Jedným z najpoužívanejších systémov na ich tvorbu je MediaWiki. Obsah často pozostáva nie len z textu, ale taktiež z obrázkov a iných multimediálnych súborov. Tie je možné vytvárať či už pomocou počítačových, alebo formou webových aplikácií dostupných na internete a následne ich vložiť do dokumentu. Značným uľahčením tohoto procesu by bola možnosť kreslenia obrázkov súvisiacich so spracovávanými informáciami priamo v systéme MediaWiki. Existujú rozšírenia, ktoré to v čase písania tejto diplomovej práce čiastočne umožňujú, sú však závislé od aplikácií tretích strán. Integrácia grafického editora priamo do systému MediaWiki je preto vítanou vlastnosťou, ktorá môže značne uľahčiť vytváranie obsahu dokumentov.
 
-V našej diplomovej práci sme popísali pojem počítačovej grafiky a princípy kolaboratívnej práce viacerých používateľov na jednom dokumente. Vysvetlili sme si potrebné technológie na implementáciu grafického editora obrázkov pomocou webovej aplikácie, integrovanej do prostredia systému MediaWiki. Naprogramovali sme komunikačný protokol na synchronizáciu grafického editora pre viacerých používateľov spoločne pracujúcich na jednom dokumente. Vďaka tomu vidí každý používateľ zmeny vykonávané inými spolupracujúcimi používateľmi v reálnom čase. Implementované riešenie bolo integrované do MediaWiki systému používaného na adrese \url{https://wiki.matfyz.sk}. Serverovú časť sme nasadili pomocou balíčkovacieho systému Docker na server matfyz.sk. Z vykonaného testovania vyplynulo že ovládanie grafického editora je dostatočne intuitívne a poskytované funkcie sú dostačujúce pre skupinové kreslenie obrázkov počítačovej grafiky.
+V našej diplomovej práci sme popísali popísali východiská pre návrh a vývoj kolaboratívneho grafického editora -- pojem počítačovej grafiky a princípy kolaboratívnej práce viacerých používateľov na jednom dokumente. Urobili sme analýzu potrieb a vytvorili sme prehľad technológií potrebných na implementáciu grafického editora obrázkov pomocou webovej aplikácie, integrovanej do prostredia systému MediaWiki. Naprogramovali sme komunikačný protokol na synchronizáciu grafického editora pre viacerých používateľov spoločne pracujúcich na jednom dokumente. Vďaka tomu vidí každý používateľ zmeny vykonávané inými spolupracujúcimi používateľmi v reálnom čase. Implementované riešenie bolo integrované do MediaWiki systému používaného na adrese \url{https://wiki.matfyz.sk}. Serverovú časť sme nasadili pomocou balíčkovacieho systému Docker na server matfyz.sk. Z vykonaného testovania vyplynulo že ovládanie grafického editora je dostatočne intuitívne a poskytované funkcie sú dostačujúce pre kolaboratívne kreslenie a úpravu obrázkov počítačovej grafiky.
