--- a/_docs/text/results.tex
+++ b/_docs/text/results.tex
@@ -2,7 +2,7 @@
 V tejto kapitole si priblížime metodiku testovania nášho riešenia, opíšeme si testovacie scenáre a zosumarizujeme výsledky, ktoré boli dosiahnuté. Taktiež sa zameriame na opis možných vylepšení a návrh prípadnej budúcej práce na rozšírení grafického editora. 
 
 \section{Testovanie}
-Počas aktívneho vývoja aplikácie bolo zorganizované skupinové záťažové testovanie. Zúčastnili sa na ňom študenti prvého ročníka vysokej školy v počte 6. ľudí. V čase testovania bola aplikácia v stave tesne pred dokončením a obsahovala niekoľko chýb, o ktorých boli testujúci účastníci oboznámený. Testovanie prebiehalo v dvoch krokoch. V prvom kroku testovala aplikáciu skupina 3. používateľov, ktorý pracovali na zadaní popísanom v testovacom scenári nižšie. V druhom kroku bol použitý záťažový test, kedy všetci používatelia testovali aplikáciu súčasne, s veľkým počtom operácií za účelom zistenia stability synchronizácie editora.
+Počas aktívneho vývoja aplikácie bolo zorganizované skupinové záťažové testovanie. Zúčastnili sa na ňom študenti prvého ročníka vysokej školy v počte 6. ľudí. V čase testovania bola aplikácia v stave tesne pred dokončením a obsahovala niekoľko chýb, o ktorých boli testujúci účastníci uvedomení. Testovanie prebiehalo v dvoch krokoch. V prvom kroku testovala aplikáciu skupina 3. používateľov, ktorí pracovali na zadaní popísanom v testovacom scenári nižšie. V druhom kroku bol použitý záťažový test, kedy všetci používatelia testovali aplikáciu súčasne, s veľkým počtom operácií za účelom zistenia stability synchronizácie editora.
 
 \subsection{Testovací scenár}
 Zadaním testovacieho scenára bolo \textit{vytvoriť jednoduchý grafický návrh webovej aplikácie} vo forme blogu. Grafický návrh musel pozostávať z 3. podstránok.
@@ -13,7 +13,7 @@ Zadaním testovacieho scenára bolo \textit{vytvoriť jednoduchý grafický náv
 \end{enumerate}
 
 \subsection{Výsledky testovania}
-Pri testovaní sa neprejavili žiadne zásadné nedostatky alebo chyby aplikácie okrem tých, na ktoré boli účastníci upozornený. V jednom prípade sa nepodarilo načítať prostredie grafického editora, čo bolo spôsobené zastaralou verziou internetového prehliadača. 
+Pri testovaní sa neprejavili žiadne zásadné nedostatky alebo chyby aplikácie okrem tých, na ktoré boli účastníci upozornení. V jednom prípade sa nepodarilo načítať prostredie grafického editora, čo bolo spôsobené zastaralou verziou internetového prehliadača. 
 
 Zúčastnená vzorka používateľov bola po testovaní vyzvaná na vyplnenie krátkeho dotazníka, kde bolo potrebné zhodnotiť prácu s editorom a popísať jeho prípadné nedostatky. 
 
