grammar fix, abstract, etc....

--- a/_docs/text/00main.tex
+++ b/_docs/text/00main.tex
@@ -187,7 +187,7 @@ Konzultant: & \mfconsultant
 \MakeUppercase{Krasňan}, Martin: \textit{\mftitle} [\mfthesistype]. - Univerzita Komenského v Bratislave. Fakulta matematiky, fyziky a informatiky; \mfpracovisko. - Školiteľ: \mfadvisor. Bratislava: \mfplacedate. 85 strán.
 %TODO: pocet stran
 
-Pri súčasnom rozvoji používania internetu a webových aplikácií je vítanou možnosťou kolaboratívne vytváranie infromácií, ktoré sú na internete vyhľadávané a udržiavané. Jedným z najpoužívanejších nástrojov umožňujúcich tento proces je systém MediaWiki.
+Pri súčasnom rozvoji používania internetu a webových aplikácií je vítanou možnosťou kolaboratívne vytváranie infromácií, ktoré sú na internete vyhľadávané a udržiavané. Jedným z používaných nástrojov umožňujúcich tento proces je systém MediaWiki.
 Cieľom diplomovej práce bolo navrhnúť a implementovať grafický editor pre systém MediaWiki, umožňujúci kolaboratívne kreslenie a úpravu obrázkov. Vytvorený editor bolo potrebné integrovať do stránky wiki.matfyz.sk. Nami implementované riešenie pozostáva z dvoch častí. Prvú časť tvorí implementácia grafického editora vektorových obrázkov. Integrácia do systému MediaWiki bola realizovaná formou rozšírenia. V druhej časti sme vytvorili komunikačný protokol a synchronizačný server, slúžiaci na výmenu informácií o obsahu grafickej plochy editorov spolupracujúcich používateľov. 
 
 ~\\
